--- a/client/src/components/pages/Login/Login.scss
+++ b/client/src/components/pages/Login/Login.scss
@@ -34,6 +34,7 @@
       &--img {
          width: 100px;
          display: flex;
+         align-self: center;
       }
       h3 {
          font-size: 16px;
@@ -50,7 +51,7 @@
          transform: translateY(-50%);
          color: #3b3b3b85;
       }
-      &__group:not(:last-child) {
+      &__group {
          margin-bottom: 25px;
       }
       &__input {
@@ -85,7 +86,7 @@
             font-weight: 700;
             font-size: 16px;
             box-shadow: var(--card-shadow);
-            text-align: left;
+            display: flex;
             &:focus {
                outline: none;
                box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
