--- a/client/src/components/pages/Signup/Signup.scss
+++ b/client/src/components/pages/Signup/Signup.scss
@@ -1,15 +1,21 @@
 .signup {
-   min-height: 80vh;
+   // min-height: 80vh;
+   margin: 50px 0 80px 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
+   width: 100%;
+   &__btn-group {
+      display: flex;
+      justify-content: space-around;
+   }
    &__steeper {
       //   margin-top: -1000px;
       width: 450px;
       display: flex;
       justify-content: center;
-      margin: 0px 0 80px 0;
+      margin: 0px 0 45px 0;
    }
    .password__validation {
       display: flex;
