--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -16,10 +16,11 @@
    padding: 0;
 }
 
-body,
-#root {
+body {
    font-size: 15px;
    color: #29303b;
+   margin: 0;
+   width: 100vw;
    line-height: 1.43;
    font-family: "Open Sans", sans-serif;
    // font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
