--- a/client/src/components/UI/Carousel/Header.scss
+++ b/client/src/components/UI/Carousel/Header.scss
@@ -1,16 +1,14 @@
 .carousel {
-   // max-width: 1200px;
+   max-width: 1200px;
    // text-align: center;
    // margin: auto;
-   margin: auto auto 15px auto;
-   height: auto;
    height: 366px;
    z-index: -1;
+   margin: auto auto 15px auto;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
-   // padding: -100px !important;
-   // min-height: 30rem;
+   max-width: 100vw;
    position: relative;
    z-index: 0;
    &-1 {
@@ -26,7 +24,6 @@
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08), 0 4px 12px rgba(0, 0, 0, 0.08);
       border: 1px solid #dcdacb;
       position: absolute;
-
       transform: translateY(-50%);
       padding: 24px;
       line-height: 1.15;
