--- a/client/src/components/UI/Card/Card.scss
+++ b/client/src/components/UI/Card/Card.scss
@@ -68,9 +68,36 @@
    .card {
       width: 250px;
    }
-   .bootcamp {
-      display: flex;
-      justify-content: center;
-      padding: 15px;
+}
+.cards {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+}
+.card {
+   flex: 0 1 calc(25% - 4em); // if 4 cards then each card take 25% * 4 = 100 and -1em is space between cards
+}
+
+@media screen and (max-width: 1200px) {
+   .card {
+      flex: 0 1 calc(100% / 4 - 4em);
+   }
+}
+@media screen and (max-width: 1024px) {
+   .card {
+      flex: 0 1 calc(100% / 3 - 4em);
+   }
+}
+@media screen and (max-width: 768px) {
+   .card {
+      flex: 0 1 calc(100% / 2 - 4em);
+   }
+}
+@media screen and (max-width: 480px) {
+   .card {
+      flex: 0 1 100%;
+      width: 200px;
+      height: 290px - 50px;
+      //   width: 100%;
    }
 }
