--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -23,6 +23,7 @@ body,
    color: #29303b;
    margin: 0;
    width: 100vw;
+   overflow-x: hidden;
    line-height: 1.43;
    font-family: "Open Sans", sans-serif;
    // font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
