--- a/client/src/utilities.scss
+++ b/client/src/utilities.scss
@@ -39,6 +39,7 @@ li {
 button {
    border: none;
    background-color: white;
+   outline: none;
    &:hover {
       cursor: pointer;
    }
@@ -111,4 +112,17 @@ input[type="submit"] {
       font-weight: 400;
       color: #505763;
    }
+}
+
+//removes up and down arrow from input[number]
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+   -webkit-appearance: none;
+   margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+   -moz-appearance: textfield;
+   outline: none;
 }
