--- a/client/src/components/UI/Dropdown/Dropdown.scss
+++ b/client/src/components/UI/Dropdown/Dropdown.scss
@@ -1,5 +1,5 @@
 .dropdown {
-   z-index: 9;
+   z-index: 99;
    position: relative;
 
    &__box {
@@ -24,6 +24,9 @@
       padding: 12px;
       width: 100%;
       height: 100%;
+      &:hover {
+         cursor: pointer;
+      }
       &:hover ~ div {
          display: block;
       }
