--- a/client/src/components/pages/ProductDetails/BootcampDetail.scss
+++ b/client/src/components/pages/ProductDetails/BootcampDetail.scss
@@ -30,6 +30,7 @@
       font-size: 16px;
       line-height: 27px;
       font-weight: 500;
+      margin-bottom: 10.5px;
    }
    &--img {
       width: 342px;
@@ -64,6 +65,7 @@
       font-weight: 500;
       display: flex;
       align-items: center;
+      margin-bottom: 10.5px;
       & > div {
          text-align: center;
          min-width: 228px;
@@ -72,7 +74,7 @@
       }
    }
    .col-1 {
-      margin-right: 15px;
+      margin-right: 65px;
       // min-width: 200px;
    }
    .col-2 {
