--- a/client/src/components/UI/Dropdown/Dropdown.scss
+++ b/client/src/components/UI/Dropdown/Dropdown.scss
@@ -24,6 +24,7 @@
       padding: 12px;
       width: 100%;
       height: 100%;
+      display: block;
       &:hover {
          cursor: pointer;
       }
