--- a/client/src/components/UI/Carousel/Header.scss
+++ b/client/src/components/UI/Carousel/Header.scss
@@ -11,6 +11,7 @@
    max-width: 100vw;
    position: relative;
    z-index: 0;
+   margin-bottom: 40px;
    &-1 {
       background-image: url("/imgs/bg-img-3.jpg");
    }
