--- a/client/src/components/pages/CartDetails/CartDetails.scss
+++ b/client/src/components/pages/CartDetails/CartDetails.scss
@@ -19,14 +19,23 @@
       color: #29303b;
       height: 100%;
       padding: 40px 0;
+      display: flex;
+      gap: 24px;
       &__title {
          font-size: 18px;
          margin-bottom: 10px;
       }
       &__box {
+         max-width: 840px;
          box-shadow: 0 0 2px #dedfe0;
          margin-bottom: 8px;
          padding: 10px;
+         display: flex;
+         .grid-2 {
+         }
       }
    }
+}
+.checkout__box > * {
+   margin-bottom: 10px;
 }
