--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -25,9 +25,9 @@ body,
    width: 100vw;
    overflow-x: hidden;
    line-height: 1.43;
-   font-family: "Open Sans", sans-serif;
-   // font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-   //    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+   // font-family: "Open Sans", sans-serif;
+   font-family: -apple-system, BlinkMacSystemFont, "Open Sans", "Segoe UI", "Roboto", "Oxygen",
+      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
 }
