Added user profile

--- a/client/src/components/UI/Card/Card.scss
+++ b/client/src/components/UI/Card/Card.scss
@@ -23,12 +23,12 @@
          position: relative;
       }
       height: 250px;
-      width: 100%;
-      position: absolute;
-      top: -50%;
+      // width: 80%;
+      // position: absolute;
+      // top: -50%;
       //   width: 240;
       object-fit: cover;
-      vertical-align: middle;
+      // vertical-align: middle;
    }
    &__body {
       padding: 15px;
